--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,13 +1,21 @@
 \documentclass{article}
+
+\title{TODO: TITLE}
+\author{Rajeev Atla}
+\date{}
+
 \begin{document}
 
 
+\section{Abstract}
 Achieving a room-temperature superconductor is considered the hallmark of condensed matter physics.
 However, researchers have faced many challenges in their search for such a material.
 In fact let us demonstrate the scope of the problem: there are 168 million unique organic and inorganic chemical substances in the Chemical Abstracts Number (CAS) registry.
 Searching through the entire phase diagrams of each of these materials would likely take decades without a way to accelerate the process.
 It would be of great help to researchers in the field to be able to differentiate between non-superconductors and superconductors.
 Herein, we report a solution to this problem: a generative adversarial network (GAN) that allows researchers to select which materials to further investigate for possible supercondctivity.
+
+\section{Introduction}
 
 
 \end{document}
