--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,23 +1,26 @@
 \documentclass{article}
 
-\title{TODO: TITLE}
+\title{Using Generative Adversarial Networks to Predict and Generate Superconductive Materials}
 \author{Rajeev Atla}
 \date{}
 
 \begin{document}
 
+\maketitle
 
 \begin{abstract}
 Achieving a room-temperature superconductor is considered the hallmark of condensed matter physics.
 However, researchers have faced many challenges in their search for such a material.
-In fact let us demonstrate the scope of the problem: there are 168 million unique organic and inorganic chemical substances in the Chemical Abstracts Number (CAS) registry.
 Searching through the entire phase diagrams of each of these materials would likely take decades without a way to accelerate the process.
-It would be of great help to researchers in the field to be able to differentiate between non-superconductors and superconductors.
-Herein, we report a solution to this problem: a generative adversarial network (GAN) that allows researchers to select which materials to further investigate for possible supercondctivity.
+It would be of great assistance to researchers in the field to be able to differentiate between non-superconductors and superconductors through a data-based method.
+Recent work has used easily observable characteristics to predict critical temperature.
+However, no clear association has been found between the easily observable characteristics of a material and its superconductive phase diagram, so a supervised learning method isn't realizable.
+Instead, unsupervised learning must be used.
+Herein, we report a solution to this problem: a generative adversarial network (GAN) that allows researchers to evaluate materials to further investigate for possible supercondctivity.
+Such a method would also be able to generate possible superconductive materials to be tested. 
 \end{abstract}
 
 
-\section{Introduction}
 
 
 \end{document}
